2009-04-15  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs
	(LineNumberTable.DW_LNE_MONO__extensions_start): New const.
	(LineNumberTable.DW_LNE_MONO__extensions_end): New const.
	(LineNumberTable.DoRead): Ignore unknown extended opcodes if
	they're within the Mono extension range.

2008-11-19  Marek Safar  <marek.safar@gmail.com>

	* MonoSymbolWriter.cs, MonoSymbolTable.cs: Change always boxed
	value type LineNumberEntry to class. It saves 19MB for corlib
	compilation.

2008-11-17  Andreia Gaita <avidigal@novell.com>

	* Makefile: Remove uneeded win32-specific hack

2008-10-15  Cedric Vivier  <cedricv@neonux.com>

	* SymbolWriterImpl.cs: implement `SetMethodSourceRange` using the
	new underlying MonoSymbolWriter's API so that the symbol files
	generated by SRE-using compiler are useful again.

2008-09-23  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Use bootstrap profile to build with correct symbol
	writer.

2008-06-18  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs
	(OffsetTable): Bump version to 50.0.

2008-06-18  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs
	(OffsetTable.MinorVersion): Bump to 7.
	(OffsetTable.Flags): New public enum.
	(OffsetTable.FileFlags): New public property.
	(OffsetTable.IsAspxSource): Removed.

2008-06-17  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs
	(MethodEntry.Flags): Removed `IsCompilerGenerated'.

2008-06-16  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs
	(SourceMethodBuilder.SetCompilerGenerated): Removed; we now use
	the `DebuggerHiddenAttribute'.

2008-06-11  Martin Baulig  <martin@ximian.com>

	* SymbolWriterImpl.cs: Put this back and make it work with the
	current symbol writer.

2008-06-11  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs
	(MonoSymbolWriter.OpenMethod): Maintain a method stack, so we can
	now recursively call OpenMethod().

2008-06-11  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs