@@ -84,6 +84,31 @@ namespace Mono.CompilerServices.SymbolWriter
 		}
 	}
 
+	public interface ISourceFile
+	{
+		SourceFileEntry Entry {
+			get;
+		}
+	}
+
+	public interface ICompileUnit
+	{
+		CompileUnitEntry Entry {
+			get;
+		}
+	}
+
+	public interface IMethodDef
+	{
+		string Name {
+			get;
+		}
+
+		int Token {
+			get;
+		}
+	}
+
 #if !CECIL
 	internal class MonoDebuggerSupport
 	{
